--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ astroid==2.8.3
 autopep8==1.5.7
 colorama==0.4.4
 isort==5.9.3
+joblib==1.1.0
 lazy-object-proxy==1.6.0
 mccabe==0.6.1
 numpy==1.21.2
@@ -11,7 +12,10 @@ pycodestyle==2.8.0
 pylint==2.11.1
 python-dateutil==2.8.2
 pytz==2021.3
+scikit-learn==1.0.1
+scipy==1.7.1
 six==1.16.0
+threadpoolctl==3.0.0
 toml==0.10.2
 typing-extensions==3.10.0.2
 wrapt==1.13.2
